--- a/app/style/global.css
+++ b/app/style/global.css
@@ -5,6 +5,8 @@
   height: 100%;
   padding: 0;
   margin: 0;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .Application a, a:visited {
